--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,4 +1,5 @@
 \part{System identifikation}
+\todo[inline, color = pink, author = Mikkel]{Her burde måske være en introduktion til hvad der skrives om i afsnittet og hvorfor. Kunne måske hjælpe til følelsen af en rød tråd igennem rapporten.}
 
 \include{./content/PTS}
 \include{./content/koordinattransformation}
