--- a/Rapport/content/implementering.tex
+++ b/Rapport/content/implementering.tex
@@ -1,4 +1,6 @@
 \part{Implementering}
+\todo[inline, color = pink, author = Mikkel]{Her bør også være en introduktion til hvad der skrives om i afsnittet og hvorfor. Kunne måske hjælpe til følelsen af en rød tråd igennem rapporten.}
+
 \include{./content/Mikrocontroller}
 \include{./content/FPGA}
 \include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
