--- a/Rapport/content/koordinattransformation.tex
+++ b/Rapport/content/koordinattransformation.tex
@@ -6,7 +6,7 @@ Positionbestemmelsen som funktion af tiden for det kartesiske koordinatset er ud
 Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordinatsystemets origo, skal PTS's rotationscenter trækkes fra, \(PTS=[\text{19,2 ; 0 ; 0,45}]\). 
 
 \subsection{Kartesiske koordinater}
-Koordinattransformation tager udgangspunkt i den kartisiske stedvektor \(Pos(t) \), ligning \ref{eq:pf:vektorparabel3d} samt PTS's offset, ligning \ref{eq:pf:stedvektorparabel}.
+Koordinattransformation tager udgangspunkt i den kartesiske stedvektor \(Pos(t) \), ligning \ref{eq:pf:vektorparabel3d} samt PTS's offset, ligning \ref{eq:pf:stedvektorparabel}.
 \begin{align}
 \begin{split}
 { P }_{ c }=Pos\left( t \right) -PTS = \left( \begin{matrix} - 9,34\cdot t-13,7 \\32,851\cdot t-19,3
@@ -28,7 +28,7 @@ Grundet PTS offset er origo for det sfæriske koordinatsystem, PTS's rotationsce
 \end{figure}
 
 \subsection{Sfæriske koordinater}
-Som det fremgår i problemformuleringen modtager PTS lerduens position som kartetiske koordinationer med en frekvens på 60 [Hz]. Dette bevirker at transformationen fra kartesiske koordinater til sfæriske koordinater gøres ud fra nedenstående ligning \ref{eq:sv_koordi}.
+Som det fremgår i problemformuleringen modtager PTS lerduens position som kartetiske koordinationer med en frekvens på 120 [Hz]. Dette bevirker at transformationen fra kartesiske koordinater til sfæriske koordinater gøres ud fra nedenstående ligning \ref{eq:sv_koordi}.
 \begin{align}
 \begin{split}
 { P }_{ s } =\left( \begin{matrix} \rho  \\ \phi  \\ \theta  \end{matrix} \right) =\left( \begin{matrix} \sqrt { { { P }_{ c_{ x } } }^{ 2 }+{ { P }_{ c_{ y } } }^{ 2 }+{ { P }_{ c_{ z } } }^{ 2 } }  \\ { tan }^{ -1 }\left( \frac { \sqrt { { { P }_{ c_{ x } } }^{ 2 }+{ { P }_{ c_{ y } } }^{ 2 } }  }{ { P }_{ c_{ z } } }  \right)  \\ { tan }^{ -1 }\left( \frac { { P }_{ c_{ y } } }{ { P }_{ c_{ x } } }  \right)  \end{matrix} \right) %\\
