Todos, fodnoter/henvisninger rettet.

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -28,7 +28,7 @@ Dette sikrer, at koden er let at udbygge og genbruge.
 
 \textbf{PWM}\\
 Der skal fra FPGAen genereres PWM signaler til at styre motorerne på PTS.
-Det ønskes at have en PWM frekvens, der ikke ligger i det hørbare område, hvilket ca. går op til 20 [kHz]\footnote{\url{en.wikipedia.org/wiki/Hearing\_range}}. 
+Det ønskes at have en PWM frekvens, der ikke ligger i det hørbare område, hvilket ca. går op til 20 [kHz]\footnote{\citep{Hearingrange}}. 
 Det ønskes at have en opløsning på PWM, der er mindst ligeså høj, som 
 opløsningen på PTS rotation, for ikke at forringe opløsningen på reguleringen. 
 Det er derfor valgt at repræsentere PWM dutycycle ved 11 bit. 
