--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -31,8 +31,7 @@ til hvert system, og at der skal findes en overførselsfunktion for hvert system
 De følgende beregninger tager altså udgangspunkt i det simplificerede afkoblede system.
 
 \subsection{DC-Motor}
-\todo[inline, author=Michael]{Henvis til motorens datasheet}
-To DC-motorer af typen EMG30 er forbundet til systemet.
+To DC-motorer af typen EMG30, \citep{emgmotor}, er forbundet til systemet.
 Det antages, at motorerne kan beskrives ved samme matematiske model.
 Den matematiske model af DC-motoren er beskrevet i appendix \ref{sec:dcmotor},
 der også beskæftiger sig med den eksperimentelle bestemmelse af parametrene for en EMG30-motor
