--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -15,7 +15,7 @@ to DC-motorer. Spændingsfaldene styres af PWM-generatorer, og regulatoren
 kan derfor styre motorernes hastighed ved at vælge PWM-signalernes duty cycles.
 
 I afsnit \ref{sec:kravspecifikation} opstilles kravene til systemets respons.
-Disse er for en 1-radian\todo[author=Anders]{Der bruges grader i resten af rapporten.} reference opsummeret nedenfor.
+Disse er for en 1-radian reference opsummeret nedenfor.
 \begin{itemize}
 \item \(t_{s} \leq 0,557 \mathrm{\left[s\right]}\) (Settling Time)
 \item \(SSE \leq 1,78 \%\) (Steady State Tracking Error)
