--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -97,6 +97,29 @@ url = {http://www.engineersedge.com/motors/gear_drive_system.htm}
 }
 
 
+@ONLINE{freertos.org,
+author = {{Real Time Engineers Ltd.}},
+title = {FreeRTOS\textregistered},
+year = {2013},
+url = {http://www.freertos.org}
+}
+
+@ONLINE{www.coocox.com/CoOS.htm,
+author = {CooCox},
+title = {CooCox CoOS},
+year = {2011},
+url = {http://www.coocox.com/CoOS.htm}
+}
+
+@ONLINE{Hearingrange,
+author = {Wikipedia},
+title = {Hearing range},
+year = {2014},
+url = {http://en.wikipedia.org/w/index.php?title=Hearing_range&oldid=608047392}
+}
+
+
+
 
 @ONLINE{emgmotor,
 author = {{Robot Electronics UK}},
