--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -40,6 +40,8 @@
 \input{./content/app_DCmotor}
 \newpage
 \input{./content/app_panandtiltparameter}
+\newpage
+\input{./content/Serial_Peripheral_Interface}
 
 
 
