--- a/Rapport/content/application.tex
+++ b/Rapport/content/application.tex
@@ -1,6 +1,6 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\part{Application}
+\part{Applikation}
 \include{./content/problemformulering}
 \include{./content/kravspecifikation}
 \include{./content/projekt_overblik}
