tilføjet efternavne til ansvarsområder

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -14,9 +14,9 @@
 }
 \begin{changemargin}{-1cm}{-1cm}
 \centering
-\noindent \namesigdate{Åse Videbæk} \hspace{1cm} \namesigdate{Nikolaj Iversen} \hspace{1cm} \namesigdate{Mikkel Jaedicke} \\~\\~\\
+\noindent \namesigdate{Åse Videbæk Jensen} \hspace{1cm} \namesigdate{Nikolaj Iversen} \hspace{1cm} \namesigdate{Mikkel Jaedicke} \\~\\~\\
 \centering
-\noindent \namesigdate{Anders Launer Bæk} \hspace{1cm}  \namesigdate{Mikael Westermann} \hspace{1cm}   \namesigdate{Michael Kjær}
+\noindent \namesigdate{Anders Launer Bæk} \hspace{1cm}  \namesigdate{Mikael Westermann} \hspace{1cm}   \namesigdate{Michael Kjær Schmidt}
 \end{changemargin}
 }
 \bigskip
