--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -1,7 +1,15 @@
 \section*{Forord}
-~\\[1 cm]
-\textit{Må jeg være fri! Ti stille! Det er for galt. Jeg finder mig ikke i det! Det er det samme hver gang. Det er det samme hver eneste gang. Man har en plan - en genial plan! - og så er man omgivet af hundehoveder og hængerøve, lusede amatører, elendige klamphuggere, latterlige skidesprællere, talentløse skiderikker, impotente grødbønder, småbørnspædagoger og socialdemokrater!}
-\\[1 cm]
-\textit{\textbf{-Egon Olsen}}
+Projektet er udarbejdet som en del af 4. semester kurset ”Indlejrede systemer”, under bachelordelen af Civilingeniøruddannelsen i Robotteknologi. 
+Projektet blev udarbejdet i tidsrummet 19. februar til 28. maj 2014, af en gruppe på 6 studerende.Rapporten beskriver udarbejdelsen af lerduetracking på et Pan & Tilt system. 
+Herunder lægges især vægt på hvilke valg der er truffet undervejs og hvorfor. 
+Rapportens målgruppe er andre studerende med kompetenceniveau svarende til 4. semester eller derover, på samme eller lignende uddannelser.Formålet med projektet er at kombinere semestrets forskellige fagligheder, og samtidig oparbejde kompetencer i problemorienteret projektarbejde.
 
-\todo[inline,author=ALLE]{Mangler at blive skrevet}
+
+
+
+
+%Nedenstående er Egon Olsen citat.
+%~\\[1 cm]
+%\textit{Må jeg være fri! Ti stille! Det er for galt. Jeg finder mig ikke i det! Det er det samme hver gang. Det er det samme hver eneste gang. Man har en plan - en genial plan! - og så er man omgivet af hundehoveder og hængerøve, lusede amatører, elendige klamphuggere, latterlige skidesprællere, talentløse skiderikker, impotente grødbønder, småbørnspædagoger og socialdemokrater!}
+%\\[1 cm]
+%\textit{\textbf{-Egon Olsen}}
