Sidste sætning fjernet.

--- a/Rapport/content/Serial_Peripheral_Interface.tex
+++ b/Rapport/content/Serial_Peripheral_Interface.tex
@@ -12,5 +12,4 @@ Opstillingen med en master og en slave kan ses på figur \ref{fig:SPImasterslave
 \label{fig:SPImasterslave}
 \end{figure}
 
-Der er fire ledninger mellem masteren og slaven: Slave Select (SS), Serial Clock (SCLK), Master Output Slave Input (MOSI) og Master Input Slave Output (MISO). SS bruges til at vælge hvilken slave der skal overføres data til/fra. Den kan også sammenlignes med en chip select. SCLK generes af masteren; SS, MOSI og MISO kører synkront med dette signal. MOSI er det data master sender til slaven, ligeså er MISO er det data som master modtager fra slaven.
- \todo[inline, author=Michael]{Sidste sætning nok overflødig; det er logisk udfra nanvne samt vist på fig. \ref{fig:SPImasterslave}.}
+Der er fire ledninger mellem masteren og slaven: Slave Select (SS), Serial Clock (SCLK), Master Output Slave Input (MOSI) og Master Input Slave Output (MISO). SS bruges til at vælge hvilken slave der skal overføres data til/fra. Den kan også sammenlignes med en chip select. SCLK generes af masteren; SS, MOSI og MISO kører synkront med dette signal.
