\Part nu med uden sideskift.

--- a/Rapport/content/evaluering.tex
+++ b/Rapport/content/evaluering.tex
@@ -1,3 +1,5 @@
 \part{Evaluering}
-\include{./content/diskussion}
+\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
+
+\input{./content/diskussion}
 \include{./content/konklusion}
