--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,2 +1,4 @@
 \part{Regulering}
-\include{./content/PID_optimering}
+\todo[color=green! 100,inline,author=ALLE]{SOME INTRO}
+
+\input{./content/PID_optimering}
