--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -7,8 +7,8 @@
 
 
 \subsection{Ziegler-Nichols Tuning Methode}
-Til bestemmelsen af controller-koefficienterne bruges den analytiske fremgangsmåde "Zielger-Nichols Tuning Methode", \citep[Kap. 7.6]{reg_modern_control_systems}. 
-Metoden tager udgangspunkt i systemets "close loop" responds. 
+Til bestemmelsen af controller-koefficienterne bruges den analytiske fremgangsmåde "Ziegler-Nichols Tuning Methode", \citep[Kap. 7.6]{reg_modern_control_systems}. 
+Metoden tager udgangspunkt i systemets "close loop" respons. 
 
 
 Tabel \ref{tb:ZieglerNichols} beskriver hvordan controller-koefficienterne bestemmes.
