--- a/Rapport/content/implementering.tex
+++ b/Rapport/content/implementering.tex
@@ -3,4 +3,4 @@
 
 \input{./content/Mikrocontroller}
 \include{./content/FPGA}
-\include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
+%\include{./content/kommunikation_mellem_mikrocontroller_og_FPGA}
