Appendix lavet som en part nu.

--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -1,4 +1,18 @@
 \newpage
+%\newcommand{\atoc}[1]{\addtocontents{toc}{#1\par}}
+%\renewcommand{\thesection}{\arabic{section}.}
+
+
+\makeatletter
+%\@addtoreset{section}{part}
+\makeatother
+\newlength\mylen
+\renewcommand\thepart{\Roman{part}}
+\renewcommand\cftpartpresnum{Part~}
+\settowidth\mylen{\bfseries\cftpartpresnum\cftpartaftersnum}
+\addtolength\cftpartnumwidth{\mylen}
+
+
 \tableofcontents
 \listoffigures
 \listoftables  
